WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286577
[GStreamer] Fix incorrect usage of StringView::rawCharacters()
https://bugs.webkit.org/show_bug.cgi?id=286577
Summary
[GStreamer] Fix incorrect usage of StringView::rawCharacters()
Philippe Normand
Reported
2025-01-27 10:18:23 PST
As reviewed in
bug 286482
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-28 04:29:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39616
EWS
Comment 2
2025-01-28 05:37:23 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 3
2025-01-28 06:02:02 PST
Committed
289444@main
(ace5a3241a15): <
https://commits.webkit.org/289444@main
> Reviewed commits have been landed. Closing PR #39616 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-01-28 06:03:14 PST
<
rdar://problem/143755538
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug