Cherry-pick 289444@main (ace5a3241a15). https://bugs.webkit.org/show_bug.cgi?id=286577

[GStreamer] Fix incorrect usage of StringView::rawCharacters()
    https://bugs.webkit.org/show_bug.cgi?id=286577

    Reviewed by Darin Adler.

    Our use of StringView::rawCharacters() is incorrect, so instead, convert the StringView to a CString.

    Canonical link: https://commits.webkit.org/289444@main

Canonical link: https://commits.webkit.org/282416.448@webkitglib/2.46